# lamina-rs

./: .envrc  .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  cog.toml  flake.nix
.helix/: languages.toml
.woodpecker/: ci.yaml
nix/: lamina.nix
src/: cli.rs  console.rs  fs.rs  git.rs  git_test.rs  lib.rs  main.rs  nix.rs
src/commands/: batch_sync.rs  last_modified.rs  mod.rs  sync.rs
src/domain/: console.rs  fs.rs  mod.rs
src/domain/commands/: last_modified.rs  mod.rs  outdated.rs  sync.rs
src/domain/git/: mod.rs  repository_service.rs
src/domain/nix/: flake_lock.rs  flake_nix.rs  mod.rs  sync_service.rs  sync_strategy.rs  update_service.rs
src/nix/: flake.rs  flake_lock.rs  flake_nix.rs  mod.rs  process.rs
src/nix/file/: flake_lock.rs  flake_nix.rs  mod.rs
tests/: sync.rs
tests/fixtures/nested/: flake.nix
tests/fixtures/oneline/: flake.nix
