[package]
name = "lamina"
version = "0.1.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
clap = {version = "4.3.4", features = ["derive"]}
time = {version = "0.3.22", features = ["serde", "parsing", "serde-well-known", "formatting"]}
comfy-table = "7.0.1"
anyhow = "1.0.71"
log = "0.4.19"
simple_logger = "4.2.0"   

[dev-dependencies]
rstest = "0.17.0"