[package]
name = "lamina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
clap = {version = "4.3.4", features = ["derive"]}
time = {version = "0.3.22", features = ["serde", "parsing", "serde-well-known", "formatting"]}
comfy-table = "7.0.1"
anyhow = "1.0.71"
log = "0.4.19"
simple_logger = "4.2.0"   
rnix = "0.11.0"
rowan = "0.15.11"
nova = "0.5.4"

[dev-dependencies]
rstest = "0.17.0"
pretty_assertions = "1.3.0"
sealed_test = "1.0.0"
cmd_lib = "1.3.0"
cmd_lib_macros = "1.3.0"
assert_cmd = "2.0.11"
lazy_static = "1.4.0"

[build-dependencies]
clap = {version = "4.3.4", features = ["derive"]}
clap_complete = {version = "4.3.2"}
