[package]
name = "lamina"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
clap = {version = "4.4.18", features = ["derive"]}
time = {version = "0.3.36", features = ["serde", "parsing", "serde-well-known", "formatting"]}
comfy-table = "7.1.1"
anyhow = "1.0.82"
log = "0.4.21"
simple_logger = "4.3.3"   
rnix = "0.11.0"
rowan = "0.15.15"
nova = "0.5.4"
thiserror = "1.0.61"
mockall = "0.12.1"
regex = "1.10.4"

[dev-dependencies]
rstest = "0.17.0"
pretty_assertions = "1.4.0"
sealed_test = "1.0.0"
cmd_lib = "1.9.3"
cmd_lib_macros = "1.9.3"
assert_cmd = "2.0.14"
lazy_static = "1.4.0"

[build-dependencies]
clap = {version = "4.4.18", features = ["derive"]}
clap_complete = {version = "4.4.10"}
